hphp/hack/test/typecheck/tconst/simplify_error.php.like_types.exp
File "simplify_error.php", line 7, characters 16-16:
Class C does not correctly implement all required members  (Typing[4110])
File "simplify_error.php", line 7, characters 26-26:
Some members are incompatible with those declared in type P
Read the following to see why:
File "simplify_error.php", line 13, characters 31-33:
Member foo has the wrong type
File "simplify_error.php", line 4, characters 38-38:
Expected ~this::T because it is an unenforceable type
File "simplify_error.php", line 13, characters 38-38:
But got T
